syntax = "proto3";

package api;

option go_package = "./pkg/api";

service Auth {
  rpc VerifyToken(AuthRequest) returns (AuthResponse) {}
}

message AuthRequest {
  string service = 1;
  string accessToken = 2;
  string refreshToken = 3;
}

message AuthResponse {
  bool result = 1;
  string login = 2;
}